--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -4,9 +4,8 @@ on:
     push:
         branches:
             - master
-    workflow_dispatch: # 手动触发
     schedule:
-        - cron: '0 0/5 * * ?'
+        - cron: '0/5 * * * ?'
 jobs:
     build:
         runs-on: ubuntu-latest
